--- a/simpleCalc.css
+++ b/simpleCalc.css
@@ -20,7 +20,8 @@
         border: 2px solid white;
         color: black;
         text-indent: 30%;
-        font-size: 55px;
+        font-size: 65px;
+        font-family: DS-Digital, normal;
     }
     
     section {
